--- a/package.json
+++ b/package.json
@@ -1,15 +1,22 @@
 {
   "name": "my-app",
+  "homepage": "https://sumitkumar-SG.github.io/sumit-portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.10",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.17",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^10.12.7",
+    "gh-pages": "^6.1.1",
     "react": "^18.1.0",
     "react-countup": "^6.2.0",
     "react-dom": "^18.1.0",
@@ -21,10 +28,13 @@
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.1",
+    "styled-components": "^6.1.8",
     "sweetalert2": "^11.4.18",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
